# kmcc

./: .gitignore  .gitmodules  .tarignore  BENCHRESULTS.csv  Mainkmcc73752.curry  Mainkmcc74978.curry  Mainkmcc75052.curry  Makefile  README.md  Test.curry  genDistribution.sh  hie.yaml  kmccrc.default  stack.yaml
.github/workflows/: ci.yml
benchmarks/: BENCHRESULTS.csv
compiler/: kmcc.cabal
compiler/src/: CmdParser.hs  Main.hs  Options.hs
compiler/src/Curry/: Analysis.hs  Annotate.hs  CaseLift.hs  CompileToFlat.hs  ConvertToHs.hs  ConvertToHs.hs-boot  ConvertUtils.hs  Default.hs  FrontendUtils.hs  GenInstances.hs
compiler/src/Haskell/: ExtsInstances.hs  GHCInvokation.hs
external_files/: BinaryFile.kmcc.hs  Directory.kmcc.hs  Findall.kmcc.hs  Global.kmcc.hs  IO.kmcc.hs  IOExts.kmcc.hs  IORef.kmcc.hs  Prelude.kmcc.hs  Process.kmcc.hs  Profile.kmcc.hs  ReadShowTerm.kmcc.hs  Socket.kmcc.hs  Time.kmcc.hs  Unsafe.kmcc.hs
lib/: AllLibraries.curry  Prelude.curry  Prelude.ext.hs  Prelude.kics2  Prelude.kmcc.hs
lib/Curry/Compiler/: Distribution.default.hs  Distribution.kmcc.hs
lib/Data/: IORef.kmcc.hs
lib/System/: CPUTime.kmcc.hs  Environment.kics2  Environment.kmcc.hs  IO.kmcc.hs
repl/: package.json
repl/src/: Installation.curry.in
repl/src/KMCC/: PkgConfig.curry  ReplConfig.curry
rts/: Any.hs  BasicDefinitions.hs  Classes.hs  MemoizedCurry.hs  MemoizedCurry.hs-boot  Narrowable.hs  Narrowable.hs-boot  NormalForm.hs  Solver.hs  Tree.hs  rts.cabal  stack.yaml
scripts/: compile-repl.sh
testing/: CaseLiteral.curry  Colormap.curry  ColormapFree.curry  Data.curry  Dutch.curry  FunPatsExpSimp.curry  FunPatsExpVar.curry  FunPatsPali.curry  Higher.curry  InfList.curry  Last.curry  NonDet.curry  Perm.curry  PermSort.curry  Perms.curry  PullTabOwnerTask.curry  TESTANYSTRAT.txt  TESTDFS.txt  TESTFUNPATS.txt  TESTFUNPATSWOBUGGY.txt  test.sh
