cabal-version:      3.0
name:               kmcc
version:            0.1.0
synopsis:
-- description:
homepage:
-- bug-reports:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Kai-Oliver Prott
maintainer:         kai.prott@hotmail.de
-- copyright:
category:           Language

executable kmcc_c
    main-is:          Main.hs
    other-modules:    Curry.Annotate,
                      Curry.Analysis,
                      Curry.CompileToFlat,
                      Curry.ConvertToHs,
                      Curry.ConvertUtils,
                      Curry.FrontendUtils,
                      Curry.GenInstances,
                      Haskell.ExtsInstances,
                      Haskell.GHCInvokation,
                      Paths_kmcc,
                      CmdParser,
                      Options
    autogen-modules:  Paths_kmcc
    ghc-options:     -Wall
    -- other-extensions:
    build-depends:    base                 ^>= 4.16,
                      curry-frontend       ^>= 2.0,
                      filepath             ^>= 1.4,
                      binary               ^>= 0.8,
                      containers           ^>= 0.6,
                      mtl                  ^>= 2.2,
                      haskell-src-exts     ^>= 1.23,
                      deepseq              ^>= 1.4,
                      directory            ^>= 1.3,
                      optparse-applicative ^>= 0.17,
                      process              ^>= 1.6,
                      time                 ^>= 1.11,
    hs-source-dirs:   src
    default-language: GHC2021
