cabal-version: 3.0
name:          rts
version:       0.5.0.0
license:       BSD-3-Clause
license-file:  LICENSE
copyright:     (c) 2020-2025, Kai-Oliver Prott, Finn Teegen
maintainer:    mail@kaiprott.de
author:        Kai-Oliver Prott, Finn Teegen
category:      Language
build-type:    Simple
stability:     experimental

common deps
  build-depends:
    base             ^>= 4.20,
    ghc-prim         ^>= 0.12,
    template-haskell ^>= 2.22,
    containers       ^>= 0.7,
    deque            ^>= 0.4,
    transformers     ^>= 0.6,
    mtl              ^>= 2.3,
    syb              ^>= 0.7,
    extra            ^>= 1.8,
    tree-monad       ^>= 0.3,
    kan-extensions   ^>= 5.2,
    sbv              ^>= 10.6,
    adjunctions      ^>= 4.4,
    deepseq
  ghc-options:      -Wall
  default-language: GHC2021
  other-extensions:
    TupleSections,
    RecursiveDo,
    EmptyCase,
    LambdaCase,
    OverloadedStrings,
    TypeFamilies,
    RankNTypes,
    ScopedTypeVariables,
    ExistentialQuantification,
    TypeOperators,
    FlexibleContexts,
    FlexibleInstances,
    UndecidableInstances,
    FunctionalDependencies,
    DeriveFunctor,
    DeriveGeneric,
    DeriveDataTypeable,
    GeneralizedNewtypeDeriving,
    DeriveAnyClass,
    EmptyDataDeriving,
    StandaloneDeriving,
    DefaultSignatures,
    MultiParamTypeClasses,
    TemplateHaskell

library
  import: deps
  exposed-modules:
    Classes
    Tree
    MemoizedCurry
    BasicDefinitions
    Narrowable
    Solver
    Any
